docs: README updates for 0.23.3
- Lead text bumped to 0.23.3 and notes the demo registers two tools
  (list_files + calculator) and surfaces prefill progress.
- Run section adds a calculator example invocation alongside the
  list_files one.
- Expected output shows the new `prefill: N/T (P%)` lines and a brief
  note that they come from VerboseAgentListener.onPrefillProgress
  (the new 0.23.3 AgentListener callback).
- "What's happening under the hood" diagram updated: both tools
  registered, generateUntilStop split into per-prefill-token and
  per-generated-token branches, listener type named.
- New "Source layout" subsection documents the carved-out files
  (Main / DemoLog / Calc / CalculatorTool / ListFilesTool /
  VerboseAgentListener) so readers can grab any of them as a
  starting point without dragging Main with them.
- "Per-turn re-prefill" paragraph mentions the autoregressive
  forward-per-token explanation and points at the progress line.
- Troubleshooting:
  - Markdown-fence note updated — 0.23.2+ parser tolerates fences.
  - Round-2 entry updated to reference the visible progress.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>